@@ -153,12 +153,10 @@ function( _calamares_add_module_subdirectory_impl )
 
                     get_filename_component( FLEXT ${MODULE_FILE} EXT )
                     if( "${FLEXT}" STREQUAL ".conf" )
-                        if( INSTALL_CONFIG )
-                            install( FILES ${CMAKE_CURRENT_BINARY_DIR}/${SUBDIRECTORY}/${MODULE_FILE}
-                                    DESTINATION ${MODULE_DATA_DESTINATION} )
-                        endif()
+                        message(STATUS "Config ${MODULE_FILE}")
                         list( APPEND MODULE_CONFIG_FILES ${MODULE_FILE} )
                     else()
+                        message(STATUS "Non-Config ${MODULE_FILE}")
                         install( FILES ${CMAKE_CURRENT_BINARY_DIR}/${SUBDIRECTORY}/${MODULE_FILE}
                                  DESTINATION ${MODULE_DESTINATION} )
                     endif()
@@ -169,12 +167,7 @@ function( _calamares_add_module_subdirectory_impl )
             message( "   ${Green}TYPE:${ColorReset} jobmodule" )
             message( "   ${Green}MODULE_DESTINATION:${ColorReset} ${MODULE_DESTINATION}" )
             if( MODULE_CONFIG_FILES )
-                if ( INSTALL_CONFIG )
-                    set( _destination "${MODULE_DATA_DESTINATION}" )
-                else()
-                    set( _destination "[Build directory only]" )
-                endif()
-                message( "   ${Green}CONFIGURATION_FILES:${ColorReset} ${MODULE_CONFIG_FILES} => ${_destination}" )
+                message( "   ${Green}CONFIGURATION_FILES:${ColorReset} ${MODULE_CONFIG_FILES} => [Build directory only]" )
             endif()
             message( "" )
             # We copy over the lang directory, if any
