@@ -104,10 +104,7 @@ function( calamares_add_plugin )
             message( FATAL_ERROR "${Red}NO_CONFIG${ColorReset} is set, with configuration ${Red}${PLUGIN_CONFIG_FILES}${ColorReset}" )
         endif()
         set( _destination "(unknown)" )
-        if ( INSTALL_CONFIG AND NOT PLUGIN_NO_INSTALL )
-            set( _destination "${PLUGIN_DATA_DESTINATION}" )
-        elseif( NOT PLUGIN_NO_INSTALL )
-            # Not INSTALL_CONFIG
+        if( NOT PLUGIN_NO_INSTALL )
             set( _destination "[Build directory only]" )
         else()
             set( _destination "[Skipping installation]" )
@@ -210,16 +207,11 @@ function( calamares_add_plugin )
 
         set( _warned_config OFF )
         foreach( PLUGIN_CONFIG_FILE ${PLUGIN_CONFIG_FILES} )
-            if( ${CMAKE_CURRENT_SOURCE_DIR}/${PLUGIN_CONFIG_FILE} IS_NEWER_THAN ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_CONFIG_FILE} OR INSTALL_CONFIG )
+            if( ${CMAKE_CURRENT_SOURCE_DIR}/${PLUGIN_CONFIG_FILE} IS_NEWER_THAN ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_CONFIG_FILE} )
                 configure_file( ${PLUGIN_CONFIG_FILE} ${PLUGIN_CONFIG_FILE} COPYONLY )
             else()
                 message( "   ${BoldYellow}Not updating${ColorReset} ${PLUGIN_CONFIG_FILE}" )
                 set( _warned_config ON )
-            endif()
-            if ( INSTALL_CONFIG )
-                install(
-                    FILES ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_CONFIG_FILE}
-                    DESTINATION ${PLUGIN_DATA_DESTINATION} )
             endif()
         endforeach()
         if ( _warned_config )
